# linear-dsp

./: linear-dsp.cabal  stack.yaml
SlidingWindow/: Linear.hs  ST.hs
