cabal-version:       >=1.10
name:                linear-dsp
version:             0.1
author:              Roman Cheplyaka
maintainer:          roma@ro-che.info
build-type:          Simple

library
  exposed-modules:
    SlidingWindow.Linear
    SlidingWindow.ST
  build-depends:       base, linear-base, vector
  default-language:    Haskell2010
  ghc-options: -Wall
